<resources>
    <string name="app_name">Hopo-DonationApp</string>
    <string name="full_name">Full name</string>
    <string name="email">email</string>
    <string name="phone_num">phone number</string>
    <string name="address">address</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="sign_up">Sign up</string>
    <string name="account_setting">Account setting</string>
    <string name="requests_massages">Requests Massages</string>
    <string name="log_out">Log out</string>
    <string name="see_your_profile">My Profile</string>
    <string name="add_post"> Add New Post</string>
    <string name="notification">Notification</string>
    <string name="allPosts">All</string>
    <string name="setting">Setting</string>
    <string name="posts">Posts</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="session_was_expired_logout_processing">session was expired logout processing</string>
    <string name="changePassword">Change Password</string>
    <string name="orders">post Orders</string>
    <string name="finish">finish</string>
    <string name="confirm">Confirm</string>
    <string name="confirmation_message">accept this order</string>
    <string name="beneficiary">beneficiary</string>
    <string name="donor">Donor</string>
    <string name="filed_operation">Failed operation</string>
    <string name="success_operation">success operation</string>
    <string name="home">Home</string>
    <string name="write_email">Write your email</string>
    <string name="write_password">Write Your Password</string>
    <string name="write_name">Write Your Username</string>
    <string name="write_address">Write Your Address</string>
    <string name="write_phone">Write Your Phone</string>
    <string name="create_account">Create Account</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="donation">Donation</string>
    <string name="post">Post</string>
    <string name="clear">clear</string>
    <string name="requests">Requests</string>
    <string name="donations">Donations</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="allCategory">All</string>
    <string name="cancle">Cancle</string>
    <string name="completed">completed</string>
    <string name="pending">Pending</string>
    <string name="status">Status</string>
    <string name="ordersNotAvailable">orders not available</string>
    <string name="deletedUser">"this user was deleted "</string>
    <string name="add_comment">Add Comment</string>
    <string name="send">Send</string>
    <string name="save_changes">Save changes</string>
    <string name="allPostsTitle">All posts</string>
    <string name="accept_request_msg">" accept your request"</string>
    <string name="delete_post_msg">" delete his  post"</string>
    <string name="add_request_msg">" add request to your post"</string>
    <string name="update_post_msg">" update his post"</string>
    <string name="delete_request_msg">" delete his  request"</string>
    <string name="delete_post_admin_msg">" we delete your post because we saw something wrong"</string>

</resources>