<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/allPosts"
            android:icon="@drawable/homee"
            android:title="@string/home" />
        <item
            android:id="@+id/add_post"
            android:icon="@drawable/addd"
            android:title="@string/add_post" />
        <item
            android:id="@+id/notifcation"
            android:icon="@drawable/notifi"
            android:title="@string/notification" />
        <item
            android:id="@+id/profile"
            android:icon="@drawable/prof"
            android:title="@string/see_your_profile" />

    </group>

    <item android:title="@string/account_setting"
        android:id="@+id/title">
        <menu>
            <item
                android:id="@+id/nav_change_password"
                android:icon="@drawable/lockk"
                android:title="@string/changePassword" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/out"
                android:title="@string/log_out" />
        </menu>
    </item>

</menu>