<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/back"
    tools:context=".activities.SignInActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/icon_img"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_70sdp"
                android:layout_marginRight="@dimen/_16sdp"
                app:srcCompat="@drawable/undraw_secure_login_pdn4" />

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/icon_img"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/_26sdp"
                android:layout_marginTop="@dimen/_22sdp"
                android:layout_marginEnd="@dimen/_26sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/Login"
                android:textColor="@color/dark_blue"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold"
                android:typeface="normal" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInput_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/_21sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_21sdp"
                android:hint="@string/write_email"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_gravity="start"
                    android:background="@drawable/text_input"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:typeface="normal" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textError_email"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@id/textInput_email"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="-6dp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:text="@string/account_setting"
                android:textColor="@color/red"
                android:visibility="gone" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInput_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textInput_email"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/_21sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_21sdp"
                android:hint="@string/write_password"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:layout_gravity="start"
                    android:background="@drawable/text_input"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:typeface="normal" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textError_password"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@id/textInput_password"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="-6dp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:text="@string/account_setting"
                android:textColor="@color/red"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_below="@+id/textInput_password"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/_21sdp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:background="@drawable/button_profile1"
                android:gravity="center"
                android:text="@string/Login"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.1"
                app:loaderColor="@color/black"
                app:loaderStyle="overshoot"
                app:loaderWidth="3dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_btn"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_30sdp"
                android:gravity="center">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" New to logistics? "
                    android:textColor="@color/dark_blue"
                    android:typeface="normal" />

                <TextView
                    android:id="@+id/register_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Register"
                    android:textColor="@color/color_app"
                    android:typeface="normal" />

            </LinearLayout>


        </RelativeLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>