<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_details"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/view2"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />


        <RelativeLayout
            android:id="@+id/edit_user_image"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_90sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_50sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:src="@drawable/usericon" />

            <ImageView
                android:id="@+id/change_profile_image_btn"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/shape_blue_circle"
                android:src="@drawable/camera" />

        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInput_email"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:hint="@string/write_email"
            android:paddingStart="@dimen/_10sdp"
            android:textColorHint="@color/dark_gray"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconMode="clear_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_user_image">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:background="@drawable/text_input"
                android:inputType="textEmailAddress"
                android:padding="@dimen/_8sdp"
                android:textColor="@color/black"
                android:typeface="normal" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textError_email"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="-6dp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:text="@string/account_setting"
            android:textColor="@color/red"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInput_email" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInput_username"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:hint="@string/write_name"
            android:paddingStart="@dimen/_10sdp"
            android:textColorHint="@color/dark_gray"
            app:boxStrokeWidth="0dp"
            app:endIconMode="clear_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInput_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:background="@drawable/text_input"

                android:inputType="textPersonName"
                android:padding="@dimen/_8sdp"
                android:textColor="@color/black"
                android:typeface="normal" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textError_userName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="-6dp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:text="@string/account_setting"
            android:textColor="@color/red"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInput_username" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInput_location"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:hint="@string/write_address"
            android:paddingStart="@dimen/_10sdp"
            android:textColorHint="@color/dark_gray"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconMode="clear_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInput_username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:background="@drawable/text_input"

                android:inputType="textEmailAddress"
                android:padding="@dimen/_8sdp"
                android:textColor="@color/black"
                android:typeface="normal" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textError_address"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="-6dp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:text="@string/account_setting"
            android:textColor="@color/red"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInput_location" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInput_phone"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:hint="@string/write_phone"
            android:paddingStart="@dimen/_10sdp"
            android:textColorHint="@color/dark_gray"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconMode="clear_text"
            app:helperTextTextColor="#FF0000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInput_location"
            app:prefixText="+970"
            app:prefixTextColor="#7C98C2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:background="@drawable/text_input"
                android:inputType="number"
                android:padding="@dimen/_8sdp"
                android:textColor="@color/black"
                android:typeface="normal" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textError_phone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="-6dp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:text="@string/account_setting"
            android:textColor="@color/red"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInput_phone" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_18sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_50sdp"
            android:background="@drawable/button_profile1"
            android:text="@string/save_changes"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintTop_toBottomOf="@id/textInput_phone" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>